2007-02-16  npremji  <npremji@redhat.com>

	* StackFrame.java (getSymbolName): Fixed to return "" instead of null
	if symbol name is null.
	(toPrint): Changed to just use getSymbolName.

2007-02-16  Mike Cvet  <mcvet@redhat.com>

	* RunState.java (swContinue): Added. Temporary workaround for 
	#4057.

2007-02-15  Mike Cvet  <mcvet@redhat.com>

	* TestStackBacktrace.java (testFramePopping): Marked broken for
	#4059.
	(testFramePushing): Ditto.
	* StackFrame.java (getDOMSource): Refactored from getData().
	Changed to match getDOMFunction().
	* RunState.java (STEP_INSTRUCTION): Refactored from
	INSTRUCTION_STEP to match other macros.
	(STEP_INSTRUCTION_NEXT, STEP_INSTRUCTION_NEXT_OVER): Added for
	instruction-level 'step over.'
	(stepInstruction): Added - new overloaded method for instruction
	stepping; takes a Task.
	(setUpStepNextInstruction): Added - new method for instruction
	step-over. 
	(setUpStepNextInstruction): Added - overloaded above.
	(stepNextInstruction): Added. Performs instruction-level step-over.
	(stepOver): Removed debugging statements.
	(cleanUpBreakPoint): Nullify breakpoint.
	(LockObserver.update): Added new cases for instruction step-over.
	(LockObserver.blockTask): Removed redundant call for adding observer.

2007-02-15  Tim Moore  <timoore@redhat.com>

	* RunState.java (RunState): Add logger member.
	(STOPPED, RUNNING, INSTRUCTION_STEP, STEP_IN, STEP_OVER, STEP_OUT,
	STEP_OVER_LINE_STEP): Make public.
	(run): call requestUnblock on the instruction observer.
	(Breakpoint.address, Breakpoint.triggered, Breakpoint.added,
	Breakpoint.removed): Make protected.
	(Breakpoint): Print out address in hex.
	(logHit): New method.
	(Breakpoint.updateHit): Change uses of System.out.println to
	logging calls.
	(SourceBreakpoint.updateHit): More logging, call setChanged, call
	super.updateHit.
	(SourceBreakpoint.addedTo): Override method; don't delete the
	RunState as instruction observer.

2007-02-14  Mike Cvet  <mcvet@redhat.com>
